--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
   background-color: grey;
 }
 
-@media (orientation: landscape) and (max-width: 850px) and (max-height:500px){
+@media (orientation: landscape) and (max-width: 850px) and (max-height: 500px) {
   .container {
     display: flex !important;
     flex-wrap: nowrap !important;
@@ -63,25 +63,46 @@ body {
     height: 100vh !important;
     margin-bottom: 3rem !important;
   }
-  body {
-    background-color: green !important; /* dunkles Blau */
-  }
+
   .row {
     display: contents !important;
- 
-  
   }
 
   .btn {
     width: 22vh !important;
     height: 22vh !important;
-    margin: 1vh!important;
+    margin: 1vh !important;
   }
 
+  #level-title {
+    font-size: 2rem !important;
+    margin-bottom: 1rem !important;
+  }
+}
 
- #level-title{
-font-size: 2rem !important;
-margin-bottom: 1rem !important;
+@media (orientation: portrait) and (max-width: 850px) {
+  .container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
- } 
+  }
+
+  .row {
+    display: contents;
+  }
+
+  .btn {
+    width: 22vh;
+    height: 22vh;
+    margin: 1rem;
+  }
+
+#level-titel{
+font-size: 2rem;
+margin-bottom: 1rem;
+
+}
 }
