--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 #level-title {
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
   margin: 5%;
   color: #fef2bf;
@@ -53,7 +53,7 @@ body {
   background-color: grey;
 }
 
-@media (orientation: landscape) and (max-width: 850px) and (max-height: 500px) {
+@media (orientation: landscape) and (max-width: 915px) and (max-height: 500px) {
   .container {
     display: flex !important;
     flex-wrap: nowrap !important;
@@ -87,7 +87,6 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-
   }
 
   .row {
@@ -100,9 +99,8 @@ body {
     margin: 1rem;
   }
 
-#level-titel{
-font-size: 2rem;
-margin-bottom: 1rem;
-
-}
+  #level-title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
 }
